# LaunchLens

./: .gitignore  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: main.jsx  styles.css
pitch/: LaunchLens_pitch_deck.pptx  deck.html
src/backend/: .env.example  api.py  app.py  config.py  diagram.py  graph.py  main.py  state.py  tools.py
src/backend/nodes/: __init__.py  _helpers.py  agent.py  fanout.py  memory.py  router.py  summarize.py  verdict.py
tests/: test_api.py  test_app.py  test_diagram.py  test_graph.py  test_main.py  test_node.py
