[project]
name = "launch-lens"
version = "0.1.0"
description = "LaunchLens - a LangGraph market-research assistant that routes a founder's product question to demand/pricing/news research and returns a GO / NICHE / NO-GO verdict."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.125.0",
    "google-search-results>=2.4.2",
    "ipython>=9.14.1",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite==3.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.38.0",
]
